Update index .html

--- a/site_calculadora_area/index .html
+++ b/site_calculadora_area/index .html
@@ -68,7 +68,7 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-XXXXXXXXXX');
+    gtag('config', '365521186');
   </script>
 </body>
 </html>
