Update index .html

--- a/site_calculadora_area/index .html
+++ b/site_calculadora_area/index .html
@@ -15,6 +15,14 @@
         <div class="muted">Estilo tech futurista • resultados com 5 casas decimais</div>
       </div>
     </div>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JSQNEVRFD3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-JSQNEVRFD3');
+    </script>
   </header>
 
   <aside class="sidebar" aria-label="Escolha de figuras">
@@ -61,14 +69,5 @@
   </footer>
 
   <script src="script.js"></script>
-
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', '365521186');
-  </script>
 </body>
 </html>
