Update index .html

--- a/index .html
+++ b/index .html
@@ -65,7 +65,7 @@
   </aside>
 
   <footer>
-    Feito com ✦ por você. Atalhos: <span class="kbd">1–5</span> trocam de figura; <span class="kbd">Enter</span> calcula.
+    @2025 Miguel Escobar. Atalhos: <span class="kbd">1–5</span> trocam de figura; <span class="kbd">Enter</span> calcula.
   </footer>
 
   <script src="script.js"></script>
