--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       gtag('config', 'G-JSQNEVRFD3');
     </script>
   </header>
-
+  <button class="menu-toggle" id="menuToggle">☰ Figuras</button>
+  
   <aside class="sidebar" aria-label="Escolha de figuras">
     <h3>Figuras</h3>
     <div class="nav" id="figNav"></div>
