--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
       </div>
     </div>
   </main>
-
+  
+  <button class="history-toggle" id="historyToggle">🕑 Histórico</button>
+  
   <aside class="history">
     <h3>Histórico</h3>
     <ul id="historyList"></ul>
