--- a/index.html
+++ b/index.html
@@ -64,9 +64,13 @@
     <h3>Histórico</h3>
     <ul id="historyList"></ul>
   </aside>
+  
+  <div class="shortcuts">
+    Atalhos: <span class="kbd">1–5</span> trocam de figura; <span class="kbd">Enter</span> calcula.
+  </div>
 
   <footer>
-    @2025 Miguel Escobar. Atalhos: <span class="kbd">1–5</span> trocam de figura; <span class="kbd">Enter</span> calcula.
+    @2025 Miguel Escobar.
   </footer>
 
   <script src="script.js"></script>
