--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="logo" aria-hidden="true"></div>
       <div>
         <h1>Calculadora de Áreas</h1>
-        <div class="muted">Estilo tech futurista • resultados com 5 casas decimais</div>
+        <div class="muted">Resultados com 5 casas decimais</div>
       </div>
     </div>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-JSQNEVRFD3"></script>
